Firefox overflow bug

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -11,7 +11,9 @@ body {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  margin: 0;
+  height: auto;
+  margin: 0 0 200px 0;
+  overflow: scroll;
   padding: 0;
 }
 
